feat: drag and drop books between shelfs

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.2",
     "react-search-input": "^0.11.2"
