--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "better-react-spinkit": "^2.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dnd": "^2.4.0",
